--- a/views/signin.jade
+++ b/views/signin.jade
@@ -12,7 +12,7 @@ html
       | '
       .middler
         h1 软件工程
-        h2 教务三班(beta version)
+        h2 教务三班奖学金评比系统
         form
           .form-group
             label(for='stu-ID') Student Id
