--- a/views/ScholarJudge.jade
+++ b/views/ScholarJudge.jade
@@ -17,7 +17,10 @@ html
             span.icon-bar
           a.navbar-brand(href='#')
             if user
-              | #{user.student_id}奖学金评比信息
+              if comment
+                | #{user.student_id}奖学金评比信息
+              else
+                | #{studentid}奖学金评比信息
         #nav-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
