first beta version 02

--- a/views/ScholarJudge.jade
+++ b/views/ScholarJudge.jade
@@ -18,7 +18,7 @@ html
           a.navbar-brand(href='#')
             if user
               if comment
-                | #{user.student_id}奖学金评比信息
+                | #{studentid}奖学金评比信息
               else
                 | #{studentid}奖学金评比信息
         #nav-collapse.collapse.navbar-collapse
